microblog.css
@import url('https://fonts.googleapis.com/css?family=Roboto');
@import url('https://fonts.googleapis.com/icon?family=Material+Icons');

html, body, div, span {
    margin: 0;
    padding: 0;
    border: 0;
}

#timeline {
	margin: 10px 10px 60px 10px;
}

.post {
    position: relative;
    display: flex;
    justify-content: flex-start;
    font-family: 'Roboto', sans-serif;
    margin-bottom: 17px;
}

.post .post-user--avatar {
    border-radius: 12px;
    margin-right: 10px;
    width: 24px;
    height: 24px;
    display: block;
    position: relative;
}

.post .post-user--avatar img {
    width: 100%;
    height: 100%;
    display: block;
    overflow: hidden;
    position: relative;
    border-radius: inherit;
    transform: translate(-50%, -50%);
    left: 50%;
    top: 50%;
}

.post .post-user--posted {
    width: calc(100% - 68px);
}

.post .post-user--posted::before {
    content: '';
    width: 0;
    height: 0;
    border-top: 0px solid transparent;
    border-bottom: 10px solid transparent;
    border-right: 10px solid #f6f6f6;
    position: relative;
    display: block;
    left: -10px;
    top: 35px;
    z-index: -1;
}

.post .post-user--posted .post-user--posted_info {
    display: table;
    width: 100%;
    margin-bottom: 4px;
    top: -10px;
    position: relative;
}

.post .post-user--posted .post-user--posted_info user {
    display: table-cell;
    vertical-align: middle;
    height: 13px;
    font-size: 11px;
    text-align: left;
    color: #092828;
    padding-left: 3px;
}

.post .post-user--posted .post-user--posted_info user::before {
    content: attr(data-realname);
}

.post .post-user--posted .post-user--posted_info user::after {
    content: ' - \0040' attr(data-username);
}

.post .post-user--posted .post-user--posted_info i {
    display: table-cell;
    font-family: 'Material Icons';
    width: 14px;
    height: 14px;
    font-size: 14px;
    text-align: center;
    color: #092828;
}

.post .post-user--posted .post-user--posted_info i[data-verified='false'] {
    display: none;
}

.post .post-user--posted .post-user--posted_info span {
    display: table-cell;
    vertical-align: middle;
    font-size: 11px;
    text-align: right;
    color: #092828;
}

.post .post-user--posted .post-user--posted_message {
    display: block;
    width: 100%;
    border-radius: 7px;
    background-color: #f6f6f6;
    top: -10px;
    position: relative;
}

.post .post-user--posted .post-user--posted_message q {
    display: table-cell;
    width: 100%;
    vertical-align: top;
    font-size: 15px;
    line-height: 1.4;
    text-align: left;
    color: #092828;
    padding: 16px;
}

.post .post-user--posted .post-user--posted_message cite {
    display: none;
}

.post .post-user--posted .post-user--posted_message .post-user--posted_message-photos {
    border-radius: inherit;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    overflow: hidden;
}

.post .post-user--posted .post-user--posted_message .post-user--posted_message-photos img {
    display:block;
    width: 100%;
}

.post .post-user--posted q::before, .post .post-user--posted q::after {
    content: '';
}

.post .post-user--posted .post-user--posted_message-replies {
    width: auto;
    height: auto;
}

.post .post-user--posted .post-user--posted_message-replies > div.post {
    padding-top: 17px;
    margin-bottom: 0px;
}

.post .post-user--posted .post-user--posted_message-replies .post-user--posted {
    width: 100%;
}

#new_post {
    padding: 7px;
    position: fixed;
    box-sizing: border-box;
    width: 100%;
    bottom: 0px;
    left: 0;
    right: 0;
}

form {
    margin: 0;
    padding: 0;
    border: 0;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    border-top: solid 1px #00c397;
}

form label {
    display: flex;
    justify-content: center;
    align-self: center;
    font-family: Roboto;
    font-size: 11px;
    text-align: left;
    color: #00c397;
    width: 35px;
}

form label.warning {
    color: #FF6F6C;
}

form textarea {
    margin: 0;
    padding: 7px;
    width: 100%;
    border: 0;
    resize: none;
    font-size: 15px;
    text-align: left;
    color: #092828;
}

form button {
    font-family: 'Material Icons';
    color: #00c397;
    background: transparent;
    border: 0;
}

.post.loggedin-user {
    flex-direction: row-reverse;
}

.post.latest-post {
    opacity: 0;
    transition: opacity .4s ease-in;
}

.post.latest-post.fade-in {
    opacity: 1;
}

.post.loggedin-user .post-user--avatar {
    margin-right: 0px;
    margin-left: 10px;
}

.post.loggedin-user .post-user--avatar {
    background-color: #000000;
}

.post.loggedin-user .post-user--avatar img {
    width: 65%;
    height: 65%;
}

.post.loggedin-user .post-user--posted .post-user--posted_info i,
.post.loggedin-user .post-user--posted .post-user--posted_info user {
    visibility: hidden;
}

.post.loggedin-user .post-user--posted .post-user--posted_info span {
    padding-right: 7px;
}

.post.loggedin-user.latest-post .post-user--posted .post-user--posted_message {
    background-color: #00c397;
}

.post.loggedin-user.latest-post .post-user--posted .post-user--posted_message q {
    color: #ffffff;
}

.post.loggedin-user .post-user--posted::before {
    border-left: 10px solid #f6f6f6;
    left: calc(100% - 1px);
}

.post.loggedin-user.latest-post .post-user--posted::before {
    border-left: 10px solid #00c397;
}

@media screen and (min-width: 400px) {
    #timeline {
        margin: 20px 20px 70px 20px;
    }
    
    .post .post-user--avatar {
        border-radius: 24px;
        width: 48px;
        height: 48px;
    }

    .post .post-user--posted {
        width: calc(100% - 116px);
    }

    .post .post-user--posted::before {
        top: 25px;
    }
}

